force-app/main/default/objects/Sales_Tax__c/fields/CITY_RATE__c.field-meta.xml
<CustomField>
    <fullName>CITY_RATE__c</fullName>
    <label>CITY_RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>