force-app/main/default/objects/Sales_Tax__c/fields/COUNTY_RATE__c.field-meta.xml
<CustomField>
    <fullName>COUNTY_RATE__c</fullName>
    <label>COUNTY_RATE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>