force-app/main/default/objects/Sales_Tax__c/fields/STATE_PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>STATE_PROVINCE__c</fullName>
    <label>STATE_PROVINCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>