force-app/main/default/objects/Sales_Tax__c/fields/STATE_RATE__c.field-meta.xml
<CustomField>
    <fullName>STATE_RATE__c</fullName>
    <label>STATE_RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>