force-app/main/default/objects/Sales_Tax__c/fields/TO_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>TO_POSTAL_CODE__c</fullName>
    <label>TO_POSTAL_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>