force-app/main/default/objects/Sales_Tax__c/fields/TOTAL_TAX_RATE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_TAX_RATE__c</fullName>
    <formula>CITY_RATE__c +  COUNTY_RATE__c +  STATE_RATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL_TAX_RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>