force-app/main/default/objects/Sales_Tax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>CITY__c</columns>
    <columns>STATE_PROVINCE__c</columns>
    <columns>CITY_RATE__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>COUNTY_RATE__c</columns>
    <columns>FROM_POSTAL_CODE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STATE_PROVINCE__c</field>
        <operation>equals</operation>
        <value>CO</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>